create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1253,3 +1253,228 @@ section.lazy-placeholder:after {
     justify-content: center;
   }
 }
+.cid-s5k70FPAwU {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background1.jpg");
+}
+.cid-s5k70FPAwU .mbr-section-title,
+.cid-s5k70FPAwU .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-s5k70FPAwU .mbr-section-text {
+  color: #232323;
+}
+.cid-s5k70FPAwU .mbr-text,
+.cid-s5k70FPAwU .typed-text,
+.cid-s5k70FPAwU .mbr-section-text {
+  letter-spacing: 0.03rem;
+}
+.cid-s5k70FPAwU .btn {
+  margin-left: 4px !important;
+}
+.cid-s5k70FPAwU .animated-element {
+  color: #ff3366;
+}
+.cid-s5k70FPAwU .typed-cursor {
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+  color: #ff3366;
+}
+.cid-s5k70FPAwU .mbr-figure {
+  border-radius: .25rem;
+  overflow: hidden;
+}
+@media (max-width: 767px) {
+  .cid-s5k70FPAwU .typed-text,
+  .cid-s5k70FPAwU .mbr-section-subtitle,
+  .cid-s5k70FPAwU .mbr-section-text,
+  .cid-s5k70FPAwU .mbr-section-btn {
+    text-align: center !important;
+  }
+}
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.cid-s5k71H0oAK {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background1.jpg");
+}
+.cid-s5k71H0oAK .mbr-section-title,
+.cid-s5k71H0oAK .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-s5k71H0oAK .mbr-section-text {
+  color: #232323;
+}
+.cid-s5k71H0oAK .mbr-text,
+.cid-s5k71H0oAK .typed-text,
+.cid-s5k71H0oAK .mbr-section-text {
+  letter-spacing: 0.03rem;
+}
+.cid-s5k71H0oAK .btn {
+  margin-left: 4px !important;
+}
+.cid-s5k71H0oAK .animated-element {
+  color: #ff3366;
+}
+.cid-s5k71H0oAK .typed-cursor {
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+  color: #ff3366;
+}
+.cid-s5k71H0oAK .mbr-figure {
+  border-radius: .25rem;
+  overflow: hidden;
+}
+@media (max-width: 767px) {
+  .cid-s5k71H0oAK .typed-text,
+  .cid-s5k71H0oAK .mbr-section-subtitle,
+  .cid-s5k71H0oAK .mbr-section-text,
+  .cid-s5k71H0oAK .mbr-section-btn {
+    text-align: center !important;
+  }
+}
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.cid-s5k77lGrJe {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background1.jpg");
+}
+.cid-s5k77lGrJe .mbr-section-title,
+.cid-s5k77lGrJe .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-s5k77lGrJe .mbr-section-text {
+  color: #232323;
+}
+.cid-s5k77lGrJe .mbr-text,
+.cid-s5k77lGrJe .typed-text,
+.cid-s5k77lGrJe .mbr-section-text {
+  letter-spacing: 0.03rem;
+}
+.cid-s5k77lGrJe .btn {
+  margin-left: 4px !important;
+}
+.cid-s5k77lGrJe .animated-element {
+  color: #ff3366;
+}
+.cid-s5k77lGrJe .typed-cursor {
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+  color: #ff3366;
+}
+.cid-s5k77lGrJe .mbr-figure {
+  border-radius: .25rem;
+  overflow: hidden;
+}
+@media (max-width: 767px) {
+  .cid-s5k77lGrJe .typed-text,
+  .cid-s5k77lGrJe .mbr-section-subtitle,
+  .cid-s5k77lGrJe .mbr-section-text,
+  .cid-s5k77lGrJe .mbr-section-btn {
+    text-align: center !important;
+  }
+}
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
