--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -785,13 +785,15 @@ section.lazy-placeholder:after {
   text-align: left;
 }
 .cid-s5C1mRJdPK {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #210240;
 }
 .cid-s5C1mRJdPK .container {
   max-width: 1500px;
 }
 .cid-s5C1mRJdPK .row {
-  background: #333333;
+  background: #767676;
 }
 .cid-s5C1mRJdPK .img-col {
   padding: 0;
@@ -812,7 +814,7 @@ section.lazy-placeholder:after {
   margin: auto;
 }
 .cid-s5C1mRJdPK .mbr-text {
-  color: #c1c1c1;
+  color: #ffffff;
 }
 @media (max-width: 1200px) {
   .cid-s5C1mRJdPK .row {
@@ -1240,7 +1242,7 @@ section.lazy-placeholder:after {
 }
 .cid-s5BEzwE82e {
   padding-top: 75px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-s5BEzwE82e .mbr-text {
