create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1163,25 +1163,25 @@ section.lazy-placeholder:after {
 .cid-s5BEzwE82e .mbr-text {
   color: #767676;
 }
-.cid-se5tKn4X65 {
+.cid-segBlRNlUO {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/29move-jobs-form-flipped-1-1696x565.jpg");
+  background-image: url("../../../assets/images/29move-jobs-848x565.jpg");
 }
-.cid-se5tKn4X65 h2,
-.cid-se5tKn4X65 h3,
-.cid-se5tKn4X65 h4,
-.cid-se5tKn4X65 p {
+.cid-segBlRNlUO h2,
+.cid-segBlRNlUO h3,
+.cid-segBlRNlUO h4,
+.cid-segBlRNlUO p {
   color: #ffffff;
 }
-.cid-se5tKn4X65 .mbr-overlay {
+.cid-segBlRNlUO .mbr-overlay {
   z-index: -1;
 }
-.cid-se5tKn4X65 .mbr-iconfont {
+.cid-segBlRNlUO .mbr-iconfont {
   font-size: 48px;
   padding-right: 1rem;
 }
-.cid-se5tKn4X65 .form-control {
+.cid-segBlRNlUO .form-control {
   box-shadow: none;
   margin-bottom: 15px;
   padding: 1.07em 1.07em;
@@ -1192,113 +1192,109 @@ section.lazy-placeholder:after {
   min-height: 3.5em;
   border-radius: .25rem;
 }
-.cid-se5tKn4X65 .form-control:focus,
-.cid-se5tKn4X65 .form-control:hover {
+.cid-segBlRNlUO .form-control:focus,
+.cid-segBlRNlUO .form-control:hover {
   border: 1px solid #e8e8e8;
   background-color: #f5f5f5;
 }
-.cid-se5tKn4X65 .form-group {
+.cid-segBlRNlUO .form-group {
   margin-bottom: 1rem;
 }
-.cid-se5tKn4X65 input::-webkit-input-placeholder,
-.cid-se5tKn4X65 textarea::-webkit-input-placeholder {
+.cid-segBlRNlUO input::-webkit-input-placeholder,
+.cid-segBlRNlUO textarea::-webkit-input-placeholder {
   color: #656565;
 }
-.cid-se5tKn4X65 input:-moz-placeholder,
-.cid-se5tKn4X65 textarea:-moz-placeholder {
+.cid-segBlRNlUO input:-moz-placeholder,
+.cid-segBlRNlUO textarea:-moz-placeholder {
   color: #656565;
 }
-.cid-se5tKn4X65 .jq-selectbox li,
-.cid-se5tKn4X65 .jq-selectbox li {
+.cid-segBlRNlUO .jq-selectbox li,
+.cid-segBlRNlUO .jq-selectbox li {
   background-color: #f5f5f5;
   color: #000000;
 }
-.cid-se5tKn4X65 .jq-selectbox li:hover,
-.cid-se5tKn4X65 .jq-selectbox li.selected {
+.cid-segBlRNlUO .jq-selectbox li:hover,
+.cid-segBlRNlUO .jq-selectbox li.selected {
   background-color: #f5f5f5;
   color: #000000;
 }
-.cid-se5tKn4X65 .jq-selectbox:hover .jq-selectbox__trigger-arrow {
+.cid-segBlRNlUO .jq-selectbox:hover .jq-selectbox__trigger-arrow {
   border-top-color: #f5f5f5;
 }
-.cid-se5tKn4X65 .jq-selectbox .jq-selectbox__trigger-arrow {
+.cid-segBlRNlUO .jq-selectbox .jq-selectbox__trigger-arrow {
   border-top-color: #f5f5f5;
 }
-.cid-se5tKn4X65 .subtext {
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-}
-.cid-se5tKn4X65 .media-container-row {
+.cid-segBlRNlUO .media-container-row {
   -webkit-align-items: center;
   align-items: center;
 }
-.cid-se5tKn4X65 .mbr-text {
+.cid-segBlRNlUO .mbr-text {
   color: #767676;
 }
-.cid-se5tKn4X65 .form-block {
+.cid-segBlRNlUO .form-block {
   padding: 3rem;
   position: relative;
 }
-.cid-se5tKn4X65 .form-block .bg {
+.cid-segBlRNlUO .form-block .bg {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background: #ff9e33;
-  opacity: 1;
+  background: #2c1616;
+  opacity: 0.5;
   z-index: 0;
 }
-.cid-se5tKn4X65 .form-block .form-wrap {
+.cid-segBlRNlUO .form-block .form-wrap {
   position: relative;
   z-index: 1;
 }
-.cid-se5tKn4X65 a:not([href]):not([tabindex]) {
+.cid-segBlRNlUO a:not([href]):not([tabindex]) {
   color: #fff;
 }
-.cid-se5tKn4X65 .multi-horizontal {
+.cid-segBlRNlUO .multi-horizontal {
   flex-grow: 1;
   -webkit-flex-grow: 1;
   max-width: 100%;
 }
-.cid-se5tKn4X65 .input-group-btn {
+.cid-segBlRNlUO .input-group-btn {
   display: block;
   text-align: center;
 }
-.cid-se5tKn4X65 textarea.form-control {
+.cid-segBlRNlUO textarea.form-control {
   resize: none;
 }
-.cid-se5tKn4X65 .media-container-row {
-  -webkit-flex-direction: row-reverse;
-  flex-direction: row-reverse;
-}
 @media (min-width: 768px) {
-  .cid-se5tKn4X65 .container > .row > .col-md-6:first-child {
+  .cid-segBlRNlUO .container > .row > .col-md-6:first-child {
     padding-right: 30px;
   }
-  .cid-se5tKn4X65 .container > .row > .col-md-6:last-child {
+  .cid-segBlRNlUO .container > .row > .col-md-6:last-child {
     padding-left: 30px;
   }
 }
 @media (max-width: 991px) {
-  .cid-se5tKn4X65 .google-map {
+  .cid-segBlRNlUO .google-map {
     padding-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-se5tKn4X65 h2 {
+  .cid-segBlRNlUO h2 {
     padding-top: 2rem;
   }
 }
 @media (max-width: 499px) {
-  .cid-se5tKn4X65 .block-content {
+  .cid-segBlRNlUO .block-content {
     padding: 0;
   }
-  .cid-se5tKn4X65 .form-block {
+  .cid-segBlRNlUO .form-block {
     padding: 1rem;
   }
 }
-.cid-se5tKn4X65 .mbr-section-subtitle {
-  color: #646e71;
+.cid-segBlRNlUO P {
+  color: #260448;
+}
+.cid-segBlRNlUO .mbr-section-subtitle {
+  color: #ffffff;
 }
 .cid-s5G6urxFUQ {
   padding-top: 0px;
